--- a/test/browser.html
+++ b/test/browser.html
@@ -1,12 +1,9 @@
-<!doctype html>
-<html>
-  <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <title>JS.Class test runner</title>
-  </head>
-  <body>
+<!DOCTYPE html>
+<html><head>
+    <meta charset="utf-8">
+    <title>Udon test suite</title>
+</head><body>
     <script type="text/javascript">CWD = '..'</script>
-    <script type="text/javascript" src="../build/min/loader.js"></script>
-    <script type="text/javascript" src="../test/runner.js"></script>
-  </body>
-</html>
+    <script type="text/javascript" src="../vendor/jsclass/loader.js"></script>
+    <script type="text/javascript" src="../test/run.js"></script>
+</body></html>
